[package]
name = "climate-apparel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
image_search = "0.4.5"
reqwest = "0.12.3"
scraper = "0.19.0"
serde_json = "1.0.116"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]
